--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"url":"https:\/\/codeinphp.github.io","title":"Code In PHP","tagline":"PHP and more...","author":"Sarfraz Ahmed","number_posts":"10","layout":"default","theme":"darkly.min.css","disqus":"codeinphp","only_titles":""}
+{"url":"https:\/\/codeinphp.github.io","title":"Code In PHP","tagline":"PHP and more...","author":"Sarfraz Ahmed","number_posts":"10","layout":"default","theme":"yeti.min.css","disqus":"codeinphp","only_titles":""}
