--- a/data/settings.json
+++ b/data/settings.json
@@ -5,7 +5,7 @@
 	"author": "Sarfraz Ahmed",
 	"number_posts": "10",
 	"layout": "default",
-	"theme": "bootstrap.min.css",
+	"theme": "yeti.min.css",
 	"disqus": "codeinphp",
 	"only_titles": ""
 }
